[package]
name = "spin-snowball"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
#client
ggez = "0.9.3"
rand = "0.9.2"
url = "2.5.7"

#server
tokio = { version = "1.37", features = ["full"] }
tokio-tungstenite = "0.28.0"
tungstenite = "0.28.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4"] }
glam = "0.30.8"
anyhow = "1.0.100"