[package]
name = "spin-snowball-client"
version = "0.1.0"
edition = "2024"

[dependencies]
#client
ggez = { version = "0.10.0-rc0" }
rand = "0.9.2"
url = "2.5.7"
ggegui = { git = "https://github.com/Vixeliz/ggegui" }

#server
tokio = { version = "1.37", features = ["full"] }
tokio-tungstenite = "0.28.0"
tungstenite = "0.28.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.3", features = ["v4"] }
glam = "0.30.8"
anyhow = "1.0.100"

spin-snowball-shared = { path = "../shared" }