[package]
name = "spin-snowball-client"
version = "0.1.0"
edition = "2024"

[dependencies]
ggez = { version = "0.10.0-rc0" }
url = "2.5.7"
ggegui = { git = "https://github.com/Vixeliz/ggegui" }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "sync", "time"] }
tungstenite = "0.28.0"
serde_json = "1.0"

spin-snowball-shared = { path = "../shared" }