
[package]
name = "spin-snowball-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
tokio-tungstenite = "0.28.0"
tungstenite = "0.28.0"
futures = "0.3"
rand = "0.9.2"
uuid = { version = "1.3", features = ["v4"] }
glam = "0.30.8"
anyhow = "1.0.100"
serde_json = "1.0"

spin-snowball-shared = { path = "../shared" }