
[package]
name = "spin-snowball-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-tungstenite = "0.28.0"
tungstenite = "0.28.0"
futures = "0.3"
uuid = { version = "1.3", features = ["v4"] }
glam = "0.30.8"
serde_json = "1.0"

spin-snowball-shared = { path = "../shared" }